[gd_scene load_steps=4 format=3 uid="uid://426k4yr1ghvt"]

[ext_resource type="Texture2D" uid="uid://7630gjgk0gio" path="res://assets/sprites/ui/gameover.png" id="1_qeq7a"]
[ext_resource type="Script" path="res://scenes/game_over/game_over_screen.gd" id="1_wnglp"]
[ext_resource type="FontFile" uid="uid://guc1lnum13m1" path="res://assets/font/bit5x3.ttf" id="3_u4c53"]

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_wnglp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_qeq7a")

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u4c53")
theme_override_font_sizes/font_size = 16
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u4c53")
theme_override_font_sizes/font_size = 16
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
